# math-helper

./: .cursorrules.backup_20251224_111957  .cursorrules.backup_20251224_112228  .gitignore  BENCHMARK.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ELECTRON_BUILD.md  INSTALL_PYTHON.txt  LICENSE  MIGRATION.md  PORTABLE_GUIDE.md  QUICK_START.md  README.md  README_START_HERE.txt  START_HERE.md  TROUBLESHOOTING.md  WINDOWS_BUILD_GUIDE.md  WORK_LOG.md  WORK_STATUS.md  app.py  benchmark.py  benchmark_simple.py  build_exe.bat  build_exe.py  build_windows_exe.bat  create_portable.bat  create_portable.py  deny.toml  docker-compose.yml  launcher.py  math_app.py.backup  project-analysis.json  project-analysis.md  pytest.ini  requirements-dev.txt  requirements.txt  (+4 more)
.cursor/: README.md
.github/workflows/: ci.yml  docs.yml  release.yml
config/: settings.yaml
crates/math-cli/: Cargo.toml
crates/math-cli/src/: main.rs
crates/math-core/: Cargo.toml
crates/math-core/benches/: calculators.rs
crates/math-core/src/: calculus.rs  complex_number.rs  errors.rs  exponent.rs  factorization.rs  geometry.rs  inequality.rs  lib.rs  linear_equation.rs  matrix.rs  polynomial.rs  prime.rs  probability.rs  quadratic_equation.rs  sequence.rs  simultaneous_equations.rs  statistics.rs  trigonometry.rs  validation.rs  vector.rs
crates/math-features/: Cargo.toml
crates/math-features/src/: export.rs  lib.rs  practice_problem.rs  progress_tracker.rs  wrong_answer_note.rs
crates/math-gui/src/: App.tsx  types.ts
crates/math-gui/src-tauri/: Cargo.toml
crates/math-gui/src-tauri/src/: main.rs
crates/math-gui/src/components/: Card.tsx  LinearCalculator.tsx  QuadraticCalculator.tsx
crates/math-tui/: Cargo.toml
crates/math-tui/src/: app.rs  calculator.rs  dashboard.rs  event_handler.rs  graph.rs  main.rs  step_solver.rs  theme.rs  ui.rs  wrong_answer.rs
electron-app/: .gitignore  CHANGELOG.md  README.md  build-preload.js  index.html  main.js  package-lock.json  package.json  playwright.config.ts  preload.js  start-dev.sh  tailwind.config.js  test-multivariable.js  vite.config.ts  vitest.config.ts
electron-app/.github/workflows/: ci.yml  release.yml
electron-app/docs/: DESIGN_PHASE2.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE3_v1.0.21_CRITICAL_FIXES.md  release-notes-v1.0.19.md  testing-guide.md
electron-app/e2e/: basic.spec.ts
electron-app/python-server/: start_server.py
electron-app/renderer/: index.html
electron-app/src/: App.tsx  i18n.ts  index.css  main.tsx  types.d.ts  types.ts
electron-app/src/components/: Button.tsx  CalculationHistory.tsx  CalculusCalculator.tsx  Card.tsx  CategoryCalculator.tsx  ComplexCalculator.tsx  ConceptGuide.tsx  ConfirmDialog.tsx  EngineeringCalculator.tsx  ErrorBoundary.tsx  ExponentCalculator.tsx  FactorizationCalculator.tsx  FavoriteButton.tsx  FavoritesList.tsx  FormulaCard.tsx  FormulaLibrary.tsx  GeometryCalculator.tsx  GraphView.tsx  InequalityCalculator.tsx  Input.tsx  LanguageSwitcher.tsx  LinearCalculator.tsx  MathKeyboard.tsx  MatrixCalculator.tsx  PolynomialCalculator.tsx  PrimeCalculator.tsx  ProbabilityCalculator.tsx  ProblemGenerator.tsx  QuadraticCalculator.tsx  SequenceCalculator.tsx  SettingsPanel.tsx  SimultaneousCalculator.tsx  SmartResultView.css  SmartResultView.tsx  StatisticsCalculator.tsx  ThemeToggle.tsx  TrigonometryCalculator.tsx  UniversalCalculator.tsx  VectorCalculator.tsx
electron-app/src/contexts/: ThemeContext.tsx
electron-app/src/data/: formulas.ts
electron-app/src/lib/: electron.ts
electron-app/src/tests/: CategoryCalculator.test.tsx  UniversalCalculator.test.tsx  nerdamerOps.test.ts  preload.test.js  robustMathOps.test.ts  setup.ts
electron-app/src/types/: categoryModeMapping.ts  favorites.ts  function-plot.d.ts  history.ts
electron-app/src/utils/: errorHandler.ts  errorMessages.ts  exportHistory.ts  graphHelper.ts  importHistory.ts  inputValidation.ts  nerdamerOps.ts  parametricSolver.ts  resultPriority.ts  robustMathOps.ts  safeStorage.ts  smartParser.ts  variableAnalyzer.ts
electron-app/tests/: mathAPI.spec.ts
math-helper/: .gitignore  BENCHMARK.md  Cargo.toml  WORK_STATUS.md  benchmark_results_rust.txt
math-helper/crates/math-cli/: Cargo.toml  README.md
math-helper/crates/math-cli/src/: main.rs
math-helper/crates/math-core/: Cargo.toml  README.md
math-helper/crates/math-core/benches/: calculators.rs
math-helper/crates/math-core/src/: geometry.rs  lib.rs  linear_equation.rs  quadratic_equation.rs  statistics.rs
math-helper/crates/math-features/: Cargo.toml  README.md
math-helper/crates/math-ui/: Cargo.toml  README.md
scripts/: build-optimized.sh  package.sh  profile.sh
src/: main.py
src/calculators/: __init__.py  algebraic_expression.py  coordinate.py  factorization.py  function_graph.py  geometry.py  linear_equation.py  linear_function.py  linear_inequality.py  prime_factor.py  probability.py  quadratic_equation.py  quadratic_function.py  rational_number.py  simultaneous_equations.py  square_root.py  statistics.py
src/features/: __init__.py  data_export.py  history_manager.py  mistake_notes.py  practice_generator.py  progress_tracker.py  visualizations.py  visualizations_plotly.py
src/ui/: __init__.py  accessibility.py  feature_pages.py  pages.py  responsive.py  sidebar.py  themes.py
src/utils/: __init__.py  config.py  i18n.py  logger.py
tests/: conftest.py  test_accessibility.py  test_coordinate.py  test_data_export.py  test_factorization.py  test_function_graph.py  test_geometry.py  test_history_manager.py  test_i18n.py  test_linear_equation.py  test_linear_function.py  test_linear_inequality.py  test_mistake_notes.py  test_practice_generator.py  test_prime_factor.py  test_probability.py  test_progress_tracker.py  test_quadratic_equation.py  test_quadratic_function.py  test_responsive.py  test_simultaneous_equations.py  test_square_root.py  test_statistics.py  test_visualizations.py  test_visualizations_plotly.py
