[workspace]
members = [
    "crates/math-core",
    "crates/math-cli",
    "crates/math-features",
    "crates/math-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Math Helper Team"]
license = "MIT"

[workspace.dependencies]
# Numerical computation
num = "0.4"
num-rational = "0.4"
num-complex = "0.4"
num-integer = "0.1"
approx = "0.5"
ndarray = "0.15"
statrs = "0.17"
primes = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "color"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing & Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Utilities
regex = "1.10"
rand = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true

# Package metadata for docs.rs
[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
