[workspace]
members = [
    "crates/math-core",
    "crates/math-features",
    "crates/math-ui",
    "crates/math-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Math Helper Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/math-helper"

[workspace.dependencies]
# Core numerical libraries
num = "0.4"
num-rational = "0.4"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
num-complex = "0.4"
approx = "0.5"

# Array/matrix operations (numpy equivalent)
ndarray = "0.15"

# Statistics
statrs = "0.17"

# Prime numbers
primes = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CSV
csv = "1.3"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Random numbers
rand = "0.8"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.14"

# Paths
dirs = "5.0"

# Regex
regex = "1.10"

# Testing (also used in dev-dependencies)
criterion = "0.5"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.bench]
inherits = "release"
