[package]
name = "math-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
math-core = { path = "../math-core" }
math-features = { path = "../math-features" }
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
num-complex.workspace = true

[[bin]]
name = "math"
path = "src/main.rs"
