[package]
name = "math-features"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
math-core = { path = "../math-core" }
serde.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rand.workspace = true
thiserror.workspace = true
csv = "1.3"
