[package]
name = "math-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core libraries
math-core = { path = "../math-core" }
math-features = { path = "../math-features" }

# CLI framework
clap = { version = "4.4", features = ["derive", "cargo"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
config = { workspace = true }

# Colored output
colored = "2.1"

# Interactive prompts (optional)
dialoguer = "0.11"

# Progress bars (optional)
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
