[package]
name = "math-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Numerical libraries
num = { workspace = true }
num-rational = { workspace = true }
num-bigint = { workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
approx = { workspace = true }

# Array operations
ndarray = { workspace = true }

# Statistics
statrs = { workspace = true }

# Prime numbers
primes = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }

# Logging
log = { workspace = true }

# Regex for algebraic expression parsing
regex = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
approx = { workspace = true }

[[bench]]
name = "calculators"
harness = false
